[iOS] AVAssetResourceLoadingRequest.request does not include a Range: header on iOS 15. https://bugs.webkit.org/show_bug.cgi?id=232195 <rdar://84574375>

Reviewed by Darin Adler.

Source/WebCore:

Explicitly add a Range: header for Blob requests which do not have one (but otherwise should).

Test: platform/mac/media/video-blob-request-contains-range-header.html

Drive-by fix: to allow this change to be testable, we must revert a change which calls all the
network delegate callbacks with empty data. This was necessary at the time because (at least for
Cocoa ports) media loading happened outside WebCore's loader path. Currently, all http(s), data,
blob, and custom protocol schemes are loaded through WebCore, leaving file:// URLs as the
remaining protocol type that needs custom handling, and only on Cocoa ports.

Further drive-by fix: WebKitLegacy's network delegate client operates synchronously during
requestResource(), so WebCoreNSURLSession must synthesize an error if that method returns a
nil resource.

* platform/graphics/avfoundation/objc/WebCoreAVFResourceLoader.mm:
(WebCore::WebCoreAVFResourceLoader::startLoading):
* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::loadResource):
* platform/network/cocoa/WebCoreNSURLSession.mm:
(-[WebCoreNSURLSessionDataTask _restart]):

LayoutTests:

The existing media-blocked-by-willsendrequest.html test only verified that file:// URLs were blocked,
not http://, so this test is moved to the http/tests/ directory where media will use http:// for loading.

* http/tests/media/media-blocked-by-willsendrequest-expected.txt: Renamed from LayoutTests/media/media-blocked-by-willsendrequest-expected.txt.
* http/tests/media/media-blocked-by-willsendrequest.html: Renamed from LayoutTests/media/media-blocked-by-willsendrequest.html.
* platform/mac/media/video-blob-request-contains-range-header.html:
* platform/mac/media/video-blob-request-contains-range-header-expected.txt: Added.
* platform/mac/media/video-blob-request-contains-range-header.html: Added.



Canonical link: https://commits.webkit.org/243836@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@285210 268f45cc-cd09-0410-ab3c-d52691b4dbfc